created store, includes example data flow

--- a/surface/src/components/ControlColumn/ControlColumn.css
+++ b/surface/src/components/ControlColumn/ControlColumn.css
@@ -5,7 +5,7 @@
     border-radius: 10px;
     /*border: 1px solid black;*/
     color: white;
-    font-family: fantasy;
+    font-family: "Comic Sans MS";
     padding: .5rem;
     display: flex;
     align-items: center;
