--- a/surface/src/components/Titlebar/Titlebar.css
+++ b/surface/src/components/Titlebar/Titlebar.css
@@ -4,7 +4,7 @@
     background-color: #003366;
     /*border: 1px solid black;*/
     color: white;
-    font-family: fantasy;
+    font-family: "Comic Sans MS";
     padding: .5rem;
     display: flex;
     align-items: center;
