standardized component test

--- a/surface/src/components/ControlColumn/ControlColumn.css
+++ b/surface/src/components/ControlColumn/ControlColumn.css
@@ -3,10 +3,10 @@
     width: 100%;
     background-color: #333333;
     border-radius: 10px;
-    /*border: 1px solid black;*/
+    border: 0.5px solid gray;
     color: white;
     font-family: "Comic Sans MS";
     padding: .5rem;
     display: flex;
-    align-items: center;
+    align-items: auto;
 }
