--- a/surface/src/components/ControlColumn/ControlColumn.css
+++ b/surface/src/components/ControlColumn/ControlColumn.css
@@ -4,9 +4,10 @@
     background-color: #333333;
     border-radius: 10px;
     border: 0.5px solid gray;
+    overflow: auto;
     color: white;
     font-family: "Comic Sans MS";
     padding: .5rem;
-    display: flex;
-    align-items: auto;
+    align-items: flex-start;
+    flex-wrap: wrap;
 }
