finalized window1 base redesign

--- a/surface/src/components/ControlColumn/ControlColumn.css
+++ b/surface/src/components/ControlColumn/ControlColumn.css
@@ -11,3 +11,9 @@
     align-items: center;
     flex-wrap: wrap;
 }
+
+.control-inline{
+    align-items: start;
+    flex-wrap: nowrap;
+    display: flex;
+}
